# python-tilewe

./: .gitmodules  LICENSE  LICENSE.md  README.md  battle.py  cython_run_game.py  cython_run_tournament.py  cython_setup.py  example_game.py  example_tournament.py  example_tournament.pyx  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/: pre-commit.sample
.github/workflows/: python-app.yml
scripts/: validate_style.sh
tests/: test_moves.py
tilewe/: __init__.c  __init__.py  __init__.pyi  elo.py  elo.pyx  engine.py  engine.pyx  pyproject.toml  setup.py  tournament.py  tournament.pyx
tilewe/src/: ctilewemodule.c
tilewe/tests/: test_elo.py  test_gameplay.py  test_moves.py  test_tiles.py
